# Visualization-syntactic-analysis

./: .gitignore  CMakeLists.txt  README.md
generate/: lex_analizer.lex
include/: debug.hpp  maketable.hpp  syntax_analysis.hpp  syntax_analysis_LR0.hpp  tokens.hpp
src/: debug.cpp  lex_analizer.cpp  main.cpp  syntax_analysis_LR0.cpp  tokens.cpp
tests/: 1.dat.ans  1.dat.json  10.dat.ans  10.dat.json  11.dat.ans  11.dat.ans.json  11.dat.json  12.dat.ans  12.dat.json  13.dat.ans  13.dat.json  2.dat.ans  2.dat.json  3.dat.ans  3.dat.json  4.dat.ans  4.dat.json  5.dat.ans  5.dat.json  6.dat.ans  6.dat.json  7.dat.ans  7.dat.json  8.dat.ans  8.dat.json  9.dat.ans  9.dat.json  test  test.cpp  test.py
